unpackaged/main/default/objects/Winter_Advisory__c/Winter_Advisory__c.object-meta.xml
<CustomObject>
    <description>General service advisory text</description>
    <label>Service Advisory</label>
    <nameField>
        <label>Winter Advisory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Advisories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>