unpackaged/main/default/objects/Winter_Advisory__c/fields/Advisory_Message_Display__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Message_Display__c</fullName>
    <label>Advisory Message Display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>