unpackaged/main/default/objects/Winter_Advisory__c/fields/Advisory_Text_Rich__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Text_Rich__c</fullName>
    <label>Advisory Text (Rich)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>