unpackaged/main/default/objects/Winter_Advisory__c/recordTypes/ERS_Watch_List.recordType-meta.xml
<RecordType>
    <fullName>ERS_Watch_List</fullName>
    <active>true</active>
    <description>Warning type for ERS Watch List. Only one active record will be displayed at a time.</description>
    <label>ERS Watch List</label>
</RecordType>