unpackaged/main/default/objects/Winter_Advisory__c/recordTypes/Winter_Advisory_City.recordType-meta.xml
<RecordType>
    <fullName>Winter_Advisory_City</fullName>
    <active>true</active>
    <description>This is the generic winter advisory which will display the message based on City</description>
    <label>Winter Advisory City</label>
</RecordType>