unpackaged/main/default/objects/Winter_Advisory__c/recordTypes/Winter_Advisory_Service.recordType-meta.xml
<RecordType>
    <fullName>Winter_Advisory_Service</fullName>
    <active>true</active>
    <description>This is the generic winter advisory which will display the message based on Service</description>
    <label>Winter Advisory Service</label>
</RecordType>