unpackaged/main/default/objects/Winter_Advisory__c/recordTypes/Winter_Advisory_State.recordType-meta.xml
<RecordType>
    <fullName>Winter_Advisory_State</fullName>
    <active>true</active>
    <description>This is the generic winter advisory which will display the message on every event</description>
    <label>Winter Advisory State</label>
</RecordType>