unpackaged/main/default/objects/Winter_Advisory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Type__c</columns>
    <columns>Active__c</columns>
    <columns>Advisory_Message_Display__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>